solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -178,6 +178,7 @@
   .resources-container {
     .text {
       top: 5rem;
+      left: 5rem;
     }
   }
 }
